Incomplete serialize to/from base64 for simpler testing of issues found in Real World Bit Vectors

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/ajo2995/CmpBitVec",
   "dependencies": {
+    "atob": "^1.1.2",
+    "btoa": "^1.1.2",
     "mocha": "^1.21.4",
     "should": "^4.0.4"
   }
