updates to package.json for npm

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "CmpBitVec",
   "version": "1.0.0",
-  "description": "CmpBitVec =========",
+  "description": "Word Aligned Hybrid Compressed Bit Vector module",
   "main": "CmpBitVec.js",
   "scripts": {
     "test": "mocha"
@@ -10,8 +10,8 @@
     "type": "git",
     "url": "https://github.com/ajo2995/CmpBitVec.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "ajo2995",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/ajo2995/CmpBitVec/issues"
   },
